# pysintegra

./: .gitignore  CHANGELOG.md  pyproject.toml  pytest.ini  readme.md  readme_en.md  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/workflows/: test.yml
examples/: __init__.py  advanced_usage.py  basic_usage.py  parse_file.py
pysintegra/: __init__.py  classes.py  models.py  processamento.py  processor.py  registros.py
tests/: __init__.py  test_models.py  test_processor.py
